try to fix easymock